Update quote color to ensure readability of the quote.

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
   line-height: 1.1;
   position: relative;
   margin: 0;
+  color: aqua;
 }
 
 .quote:before, .quote:after {
